tests/Compilation/positive/test094.juvix
-- Existential types
module test094;

type Box := mk@{
 ty : Type;
 x : ty;
};
