tests/Compilation/negative/test005.juvix
-- Axiom
module test005;

type Unit := unit : Unit;

axiom Boom : Unit;

x : Unit;
x := Boom;
